name:                gore-and-ash-async
version:             0.1.0.0
synopsis:            Core module for Gore&Ash engine that embeds async concurrent IO actions into main game loop.
description:         Please see README.md
homepage:            https://github.com/TeaspotStudio/gore-and-ash-async#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:     
                      Game.GoreAndAsh.Async
                      Game.GoreAndAsh.Async.API
                      Game.GoreAndAsh.Async.Module
                      Game.GoreAndAsh.Async.State
  
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5
                    , deepseq >= 1.4.1.1

  default-extensions: 
                      DeriveGeneric
